--- a/home.html
+++ b/home.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="./src/css/custom.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <title>Doctor Who</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg ">
+    <nav class="navbar navbar-expand-lg bg-custom" data-bs-theme="dark">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
@@ -22,6 +23,13 @@
                         <a class="nav-link" href="#">Contacto</a>
                       </li>
                 </ul>
+                <a class="navbar-brand" href="#">
+                    <img src="./assets/img/logos/logo.png" alt="Bootstrap" width="159.1px" height="163px">
+                </a>
+                <form class="d-flex" role="search">
+                    <img class="icon-search" src="./assets/img/icons/material-symbols-light_search.svg" alt="buscar icon" width="13.65px">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                  </form>
             </div>
         </div>
     </nav>
