add icons navbar

--- a/home.html
+++ b/home.html
@@ -30,6 +30,28 @@
                     <img class="icon-search" src="./assets/img/icons/material-symbols-light_search.svg" alt="buscar icon" width="13.65px">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                   </form>
+                  <ul class="navbar-nav d-flex flex-row">
+                    <li class="nav-item me-3 me-lg-0">
+                        <a class="nav-link" href="#">
+                            <img src="./assets/img/icons/facebook.svg" alt="facebook">
+                        </a>
+                    </li>
+                    <li class="nav-item me-3 me-lg-0">
+                        <a class="nav-link" href="#">
+                            <img src="./assets/img/icons/simple-icons_x.svg" alt="X twitter">
+                        </a>
+                    </li>
+                    <li class="nav-item me-3 me-lg-0">
+                        <a class="nav-link" href="#">
+                            <img src="./assets/img/icons/mdi_instagram.svg" alt="Instagram">
+                        </a>
+                    </li>
+                    <li class="nav-item me-3 me-lg-0">
+                        <a class="nav-link" href="#">
+                            <img src="./assets/img/icons/ic_baseline-tiktok.svg" alt="tiktok">
+                        </a>
+                    </li>
+                  </ul>
             </div>
         </div>
     </nav>
