--- a/home.html
+++ b/home.html
@@ -9,9 +9,9 @@
     <title>Doctor Who</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-custom" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-custom d-flex" data-bs-theme="dark">
         <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-around" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Conoce a</a>
