--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <title>Doctor Who</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-custom d-flex" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-custom d-flex py-3 py-lg-5" data-bs-theme="dark">
         <div class="container-fluid">
             <div class="collapse navbar-collapse justify-content-around" id="navbarNav">
                 <ul class="navbar-nav">
@@ -24,7 +24,7 @@
                       </li>
                 </ul>
                 <a class="navbar-brand" href="#">
-                    <img src="./assets/img/logos/logo.png" alt="Bootstrap" width="159.1px" height="163px">
+                    <img class="position-absolute top-0 start-45" src="./assets/img/logos/logo.png" alt="Bootstrap" width="159.1px" height="163px">
                 </a>
                 <form class="d-flex" role="search">
                     <img class="icon-search" src="./assets/img/icons/material-symbols-light_search.svg" alt="buscar icon" width="13.65px">
