z-index for logo

--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
                       </li>
                 </ul>
                 <a class="navbar-brand" href="#">
-                    <img class="position-absolute top-0 start-45" src="./assets/img/logos/logo.png" alt="Bootstrap" width="159.1px" height="163px">
+                    <img class="position-absolute top-0 start-45 z-3" src="./assets/img/logos/logo.png" alt="Bootstrap" width="159.1px" height="163px">
                 </a>
                 <form class="d-flex" role="search">
                     <img class="icon-search" src="./assets/img/icons/material-symbols-light_search.svg" alt="buscar icon" width="13.65px">
