--- a/home.html
+++ b/home.html
@@ -65,10 +65,10 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./assets/img/carrusel/carrusel-2.jpg" class="d-block w-100" alt="...">
+            <img src="./assets/img/carrusel/carrusel-2.jpg" class="d-block w-100" alt="the giggle">
           </div>
           <div class="carousel-item">
-            <img src="./assets/img/carrusel/carrusel-1.webp" class="d-block w-100" alt="...">
+            <img src="./assets/img/carrusel/carrusel-1.webp" class="d-block w-100" alt="characters">
           </div>
         </div>
       </div>
