--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg bg-custom d-flex py-3 py-lg-5" data-bs-theme="dark">
         <div class="container-fluid">
             <div class="collapse navbar-collapse justify-content-around" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav justify-content-between ">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Conoce a</a>
                       </li>
