--- a/home.html
+++ b/home.html
@@ -63,9 +63,15 @@
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner">
+        <div class="carousel-inner h-80">
           <div class="carousel-item active">
             <img src="./assets/img/carrusel/carrusel-2.jpg" class="d-block w-100" alt="the giggle">
+            <h1 class="position-absolute fw-bold lh-lg text-white">
+                The Giggle
+            </h1>
+            <button class="position-absolute btn-lg" type="button">
+                Ver ahora
+            </button>
           </div>
           <div class="carousel-item">
             <img src="./assets/img/carrusel/carrusel-1.webp" class="d-block w-100" alt="characters">
