--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
             <h1 class="position-absolute fw-bold lh-lg text-white">
                 The Giggle
             </h1>
-            <button class="position-absolute btn-lg" type="button">
+            <button class="position-absolute btn-lg text-body fw-bolder" type="button">
                 Ver ahora
             </button>
           </div>
