--- a/home.html
+++ b/home.html
@@ -75,6 +75,12 @@
           </div>
           <div class="carousel-item">
             <img src="./assets/img/carrusel/carrusel-1.webp" class="d-block w-100" alt="characters">
+            <h1 class="position-absolute fw-bold lh-lg text-white">
+                Allons-y!
+            </h1>
+            <button class="position-absolute btn-lg text-body fw-bolder" type="button">
+                Ver ahora
+            </button>
           </div>
         </div>
       </div>
