--- a/home.html
+++ b/home.html
@@ -84,6 +84,34 @@
           </div>
         </div>
       </div>
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 w-100">
+          <div class="col-md-4 d-flex align-items-center">
+            <img src="./assets/img/logos/logo-cadena.png" alt="logo cadena" class="mx-5">
+          </div>
+      
+          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="nav-item me-3 me-lg-0">
+                <a class="nav-link" href="#">
+                    <img src="./assets/img/icons/facebook.svg" alt="facebook">
+                </a>
+            </li>
+            <li class="nav-item me-3 me-lg-0">
+                <a class="nav-link" href="#">
+                    <img src="./assets/img/icons/simple-icons_x.svg" alt="X twitter">
+                </a>
+            </li>
+            <li class="nav-item me-3 me-lg-0">
+                <a class="nav-link" href="#">
+                    <img src="./assets/img/icons/mdi_instagram.svg" alt="Instagram">
+                </a>
+            </li>
+            <li class="nav-item me-3 me-lg-0">
+                <a class="nav-link" href="#">
+                    <img src="./assets/img/icons/ic_baseline-tiktok.svg" alt="tiktok">
+                </a>
+            </li>
+        </ul>
+        </footer>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
