demo page presentacion

--- a/presentacion.html
+++ b/presentacion.html
@@ -56,24 +56,26 @@
         </div>
     </nav>
     <div class="main">
-        <img src="./assets/img/symbols/persistencia.png" alt="persistencia" width="312px" class="custom-img1">
-        <img src="./assets/img/symbols/resistencia.png" alt="resistencia" width="480px" class="custom-img2">
         <div class="container">
-            <div class="col">
-                <h1>
+            <div class="row">
+            <div class="col my-5">
+                <h1 class="fw-bold text-white px-5">
                     Conoce a ... decimotercera doctor
                 </h1>
-                <p>
+                <p class="lh-lg text-white">
                     Lorem ipsum dolor sit amet consectetur. Convallis maecenas ac pharetra metus justo amet nunc amet. Hac pellentesque proin sapien duis natoque. Risus enim duis quis egestas non. Morbi ut potenti egestas id pharetra gravida interdum nam.
                 </p>
-                <button>
+                <button type="button" class="custom-button fw-bold center-block">
                     Ver más
                 </button>
             </div>
             <div class="col">
-
+                <img src="./assets/img/doctors/Thirteenth_Doctor_Jodie_Whittaker.jpg" alt="Thirteenth_Doctor_Jodie_Whittaker" >
             </div>
         </div>
+    </div>
+    <img src="./assets/img/symbols/persistencia.png" alt="persistencia" width="312px" class="custom-img1">
+    <img src="./assets/img/symbols/resistencia.png" alt="resistencia" width="480px" class="custom-img2">
     </div>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 w-100">
           <div class="col-md-4 d-flex align-items-center">
