--- a/contacto.html
+++ b/contacto.html
@@ -58,22 +58,30 @@
     <div class="main">
         <div class="container">
             <div class="row">
-            <div class="col my-5">
-                <h1 class="fw-bold text-white px-5">
-                    Envia tu mensaje al Doctor
+            <div class="col my-5 position-relative">
+                <h1 class="fw-bold text-white px-1">
+                    Envia tu mensaje al <br> Doctor
                 </h1>
+                <img src="./assets/img/symbols/persistencia-2.png" alt="persistencia-2" width="232px" class="position-absolute">
+    <img src="./assets/img/symbols/resistencia.png" alt="resistencia" width="333.45px" class=" position-absolute">
+    <img src="./assets/img/symbols/vencer.png" alt="vencer" width="274px" class="position-absolute bottom-50 start-50 end-0">
             </div>
-            <div class="col">
-                //
-                <button type="button" class="custom-button fw-bold center-block">
-                    Ver más
+            <div class="col my-5">
+                <div class="mb-5">
+                    <input type="text"  id="exampleFormControlInput1" placeholder="Nombre*">
+                  </div>
+                <div class="mb-5">
+                    <input type="email"  id="exampleFormControlInput2" placeholder="Email*">
+                  </div>
+                  <div class="mb-5">
+                    <textarea  id="exampleFormControlTextarea1" rows="6" placeholder="Mensaje*"></textarea>
+                  </div>
+                <button type="button" class="custom-button fw-bold mb-5 mb-5 align-item-start">
+                    Send
                 </button>
             </div>
         </div>
     </div>
-    <img src="./assets/img/symbols/persistencia-2.png" alt="persistencia-2" width="352px" class="custom-img1">
-    <img src="./assets/img/symbols/resistencia.png" alt="resistencia" width="480px" class="custom-img2">
-    <img src="./assets/img/symbols/vencer.png" alt="vencer" width="480px" class="custom-img2">
     </div>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 w-100">
           <div class="col-md-4 d-flex align-items-center">
