--- a/presentacion.html
+++ b/presentacion.html
@@ -69,7 +69,7 @@
                     Ver más
                 </button>
             </div>
-            <div class="col">
+            <div class="col presentacion">
                 <img src="./assets/img/doctors/Thirteenth_Doctor_Jodie_Whittaker.jpg" alt="Thirteenth_Doctor_Jodie_Whittaker" >
             </div>
         </div>
