--- a/contacto.html
+++ b/contacto.html
@@ -58,13 +58,15 @@
     <div class="main">
         <div class="container">
             <div class="row">
-            <div class="col my-5 position-relative">
-                <h1 class="fw-bold text-white px-1">
+            <div class="col my-5">
+                <h1 class="fw-bold text-white row center-block">
                     Envia tu mensaje al <br> Doctor
                 </h1>
-                <img src="./assets/img/symbols/persistencia-2.png" alt="persistencia-2" width="232px" class="position-absolute">
-    <img src="./assets/img/symbols/resistencia.png" alt="resistencia" width="333.45px" class=" position-absolute">
-    <img src="./assets/img/symbols/vencer.png" alt="vencer" width="274px" class="position-absolute bottom-50 start-50 end-0">
+                <div class="contact-bg row position-relative">
+                <img src="./assets/img/symbols/persistencia-2.png" alt="persistencia-2" style="width: 232px!important;" class="position-absolute">
+                <img src="./assets/img/symbols/resistencia.png" alt="resistencia" style="width: 333px!important;" class=" position-absolute">
+                <img src="./assets/img/symbols/vencer.png" alt="vencer" style="width: 274px!important;" class="position-absolute">
+            </div>
             </div>
             <div class="col my-5">
                 <div class="mb-5">
