contacto page done

--- a/contacto.html
+++ b/contacto.html
@@ -58,14 +58,14 @@
     <div class="main">
         <div class="container">
             <div class="row">
-            <div class="col my-5">
+            <div class="col my-5 position-relative">
                 <h1 class="fw-bold text-white row center-block">
                     Envia tu mensaje al <br> Doctor
                 </h1>
-                <div class="contact-bg row position-relative">
-                <img src="./assets/img/symbols/persistencia-2.png" alt="persistencia-2" style="width: 232px!important;" class="position-absolute">
-                <img src="./assets/img/symbols/resistencia.png" alt="resistencia" style="width: 333px!important;" class=" position-absolute">
-                <img src="./assets/img/symbols/vencer.png" alt="vencer" style="width: 274px!important;" class="position-absolute">
+                <div class="contact-bg row">
+                <img src="./assets/img/symbols/persistencia-2.png" alt="persistencia-2" style="width: 232px!important;" class="position-absolute ph1">
+                <img src="./assets/img/symbols/resistencia.png" alt="resistencia" style="width: 453px!important;" class=" position-absolute ph2">
+                <img src="./assets/img/symbols/vencer.png" alt="vencer" style="width: 274px!important;" class="position-absolute ph3">
             </div>
             </div>
             <div class="col my-5">
