--- a/doctors.html
+++ b/doctors.html
@@ -125,7 +125,7 @@
 
                 const cardLink = document.createElement("a");
                 cardLink.href = "#";
-                cardLink.className = "btn button custombtn";
+                cardLink.className = "btn button custombtn mb-0";
                 cardLink.textContent = "Ver más";
 
                 cardBody.appendChild(cardTitle);
