--- a/home.html
+++ b/home.html
@@ -14,13 +14,13 @@
             <div class="collapse navbar-collapse justify-content-around" id="navbarNav">
                 <ul class="navbar-nav justify-content-between ">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Conoce a</a>
+                        <a class="nav-link" href="./presentacion.html">Conoce a</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Doctores</a>
+                        <a class="nav-link" href="./doctors.html">Doctores</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
                       </li>
                 </ul>
                 <a class="navbar-brand" href="#">
@@ -28,8 +28,8 @@
                 </a>
                 <form class="d-flex" role="search">
                     <img class="icon-search" src="./assets/img/icons/material-symbols-light_search.svg" alt="buscar icon" width="13.65px">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                  </form>
+                    <input id="searchInput" class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                </form>                
                   <ul class="navbar-nav d-flex flex-row">
                     <li class="nav-item me-3 me-lg-0">
                         <a class="nav-link" href="#">
