--- a/doctors.html
+++ b/doctors.html
@@ -139,7 +139,7 @@
                     cardText.textContent = `${doctor.actor} \n ${doctor.screen_time}`;
     
                     const cardLink = document.createElement("a");
-                    cardLink.href = "#";
+                    cardLink.href = "https://www.doctorwho.tv/";
                     cardLink.className = "btn button custombtn mb-0";
                     cardLink.textContent = "Ver más";
     
