--- a/doctors.html
+++ b/doctors.html
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="./contacto.html">Contacto</a>
                       </li>
                 </ul>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="./home.html">
                     <img class="position-absolute top-0 start-45 z-3" src="./assets/img/logos/logo.png" alt="Bootstrap" width="159.1px" height="163px">
                 </a>
                 <form class="d-flex" role="search">
