--- a/contacto.html
+++ b/contacto.html
@@ -78,7 +78,7 @@
                   <div class="mb-5">
                     <textarea  id="exampleFormControlTextarea1" rows="6" placeholder="Mensaje*"></textarea>
                   </div>
-                <button type="button" class="custom-button fw-bold mb-5 mb-5 align-item-start">
+                <button type="button" class="custom-button fw-bold mb-5 mb-5 align-item-start" id="send_button">
                     Send
                 </button>
             </div>
@@ -113,6 +113,19 @@
             </li>
         </ul>
     </footer>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const sendButton = document.getElementById('send_button');
+        sendButton.addEventListener('click', function () {
+            const name = document.getElementById('exampleFormControlInput1').value;
+            const email = document.getElementById('exampleFormControlInput2').value;
+            const message = document.getElementById('exampleFormControlTextarea1').value;
+            console.log('Name:', name);
+            console.log('Email:', email);
+            console.log('Message:', message);
+        });
+    });
+</script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
